# DSC

./: .gitignore  McPit.cpp  as  model.cpp  raw  rawprogam.cpp
Final_Project/Aritmia_classify/: CMakeLists.txt  ECG_GUI_en_ID.ts
Final_Project/Aritmia_classify/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Final_Project/Aritmia_classify/src/include/: mainwindow.h  model.h
Final_Project/Aritmia_classify/src/src/: main.cpp  mainwindow.cpp  mainwindow.ui  model.cpp
Final_Project/Aritmia_classify/testCase/: testCase.txt
Final_Project/Gait_Phase/: CMakeLists.txt  training_log.txt
Final_Project/Gait_Phase/data/: training_project1_set.txt
Final_Project/Gait_Phase/include/: dataset.hpp  mainwindow.h  model.hpp
Final_Project/Gait_Phase/src/: mainwindow.cpp  mainwindow.ui  model.cpp
GaitPhase/: dataset.hpp  main.cpp  model.hpp
GaitPhase/data/: dataset.txt  labeled_dataset.txt
GaitPhase/test/: testCase.txt
Gait_Phase/: .clang-format  dataset.hpp  generate_label.cpp  main.cpp  model.hpp  test.txt  training_log.txt
Gait_Phase/data/: dataset.txt
Gui/Gait_Phase/: CMakeLists.txt
Gui/Gait_Phase/include/: dataset.hpp  mainwindow.h  model.hpp
Gui/Gait_Phase/src/: mainwindow.cpp  mainwindow.ui
aritmia_classify/: dataset.hpp  main.cpp  model.hpp
aritmia_classify/data/: dataset.txt
assigment_McPit_XOR raw/: Simple_NeuralNetwork.cpp
testing/: MLP.cpp  MLP_EBPA.hpp  as  dataset.hpp  testing.py
testing/dataset/: B.txt  E.txt  F.txt
testing/test/: A1.txt  B2.txt  D2.txt  E2.txt  F1.txt  H1.txt
week1/: Simple_NeuralNetwork.cpp  output.csv
week1/assigment_submit/: Simple_NeuralNetwork.cpp
week2/dataset/: D.txt  G.txt
week2/test/: C1.txt  E1.txt  G2.txt
week3/: MLP.cpp  MLP_EBPA.hpp  README.md  as  dataset.hpp  test_result.py  test_results.csv  training_errors.csv  training_errors_per_epoch.csv  training_errors_per_iteration.csv
week3/dataset/: A.txt  C.txt  H.txt
week3/test/: G1.txt
week3/testcase/: A2.txt  B1.txt  C2.txt  D1.txt  F2.txt
week6/: README.md  as  epoch_error.txt  iteration_error.txt  main.cpp  model.hpp  plot_epoch_error.py  plot_iteration_error.py  training_error.txt
week6/test/: testCase.txt
